user can sign up and log in to PULSE, must be a valid email and unique email and username. Google Authentication not added. This is done through custom User table in supabase, will change to use supabase built in auth.users table.

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.16.0",
+    "@prisma/client": "^5.16.1",
+    "@supabase/supabase-js": "^2.44.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "prisma": "^5.16.0"
+    "prisma": "^5.16.1"
   }
 }
