--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@supabase/supabase-js": "^2.44.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "google-auth-library": "^9.11.0"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
