--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "replicate": "^0.31.1"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
