--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "googleapis": "^140.0.1",
     "js-combinatorics": "^2.1.2",
     "react": "^18.3.1",
