--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,15 @@
     "@supabase/supabase-js": "^2.44.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "compromise": "^14.13.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
     "groq-sdk": "^0.5.0",
+    "natural": "^7.1.0",
     "node-cron": "^3.0.3",
-    "replicate": "^0.31.1"
+    "replicate": "^0.31.1",
+    "stopword": "^3.0.1"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
