--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
     "groq-sdk": "^0.5.0",
+    "jsdom": "^24.1.1",
     "natural": "^7.1.0",
     "node-cron": "^3.0.3",
+    "p-limit": "^6.1.0",
     "replicate": "^0.31.1",
     "stopword": "^3.0.1"
   },
