refactored code for modularity - deleted python files, made utils folder/file to store re-used functions

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.44.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "compromise": "^14.13.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
