--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "stopword": "^3.0.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prisma": "^5.16.1"
   }
 }
