--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.16.1",
     "@supabase/supabase-js": "^2.44.2",
+    "@tensorflow/tfjs-node": "^4.20.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
